--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,11 @@ environment:
   sdk: ^3.5.0
 
 dependencies:
+  cryptofont: ^1.0.2+1
   flutter:
     sdk: flutter
   google_fonts: ^6.2.1
+  intl: ^0.19.0
   web_socket_channel: ^3.0.1
 
 dev_dependencies:
