--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ^3.5.0
 
 dependencies:
+  animated_bottom_navigation_bar: ^1.3.3
   cryptofont: ^1.0.2+1
   flutter:
     sdk: flutter
